# amee_backend

./: .gitignore  README.md  conftest.py  manage.py  models.txt  pyproject.toml  pytest.ini  requirements.txt  start.sh
accounts/: admin.py  models.py  serializers.py  signals.py  tests.py  urls.py  views.py
amee/: asgi.py  settings.py  urls.py  wsgi.py
backoffice/: forms.py  models.py  service_paiement.py  urls.py  web_views.py
clients/: admin.py  context_processors.py  decorators.py  forms.py  models.py  serializers.py  urls.py  views.py
cms/: admin.py  forms.py  models.py  permissions.py  serializers.py  tests.py  translation.py  urls.py  utils.py  views.py
docs/: 2703_models.txt  TODO  backoffice.md  tree-27-02-2026.md  workflow.md
interactions/: admin.py  apps.py  models.py  serializers.py  signals.py  tests.py  urls.py  views.py
memberships/: admin.py  forms.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
missions/: admin.py  forms.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
organizations/: admin.py  models.py  serializers.py
portals/: admin.py  apps.py  context_processors.py  decorators.py  forms.py  mixins.py  models.py  serializers.py  urls.py  views.py
quality_control/: admin.py  forms.py  models.py  serializers.py  tests.py  urls.py  views.py
roster/: admin.py  forms.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
test/: factories.py  test_workflow_e2e.py
tresorerie/: admin.py  apps.py  forms.py  models.py  services.py  tests.py
web_public/: apps.py  (+2 more)
(+147 files in other folders)
